--- a/package.json
+++ b/package.json
@@ -1,32 +1,61 @@
 {
-  "name": "@idea2app/rest-node-ts",
-  "version": "0.1.0",
-  "license": "LGPL-3.0",
-  "author": "shiy2008@gmail.com",
-  "description": "",
-  "homepage": "https://github.com/idea2app/REST-Node-ts#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/idea2app/REST-Node-ts.git"
-  },
-  "bugs": {
-    "url": "https://github.com/idea2app/REST-Node-ts/issues"
-  },
-  "source": "source/index.ts",
-  "main": "dist/index.js",
-  "engines": {
-    "node": "^14.0.0"
-  },
-  "dependencies": {
-    "koa": "^2.13.4"
-  },
-  "devDependencies": {
-    "@types/koa": "^2.13.4",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3"
-  },
-  "scripts": {
-    "dev": "ts-node-dev source/",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "name": "@idea2app/rest-node-ts",
+    "version": "0.2.0",
+    "license": "LGPL-3.0",
+    "author": "shiy2008@gmail.com",
+    "description": "RESTful API service scaffold based on Node.js & TypeScript",
+    "homepage": "https://github.com/idea2app/REST-Node-ts#readme",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/idea2app/REST-Node-ts.git"
+    },
+    "bugs": {
+        "url": "https://github.com/idea2app/REST-Node-ts/issues"
+    },
+    "source": "source/index.ts",
+    "main": "dist/index.js",
+    "engines": {
+        "node": "^14.0.0"
+    },
+    "dependencies": {
+        "@koa/cors": "^3.3.0",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.13.2",
+        "koa": "^2.13.4",
+        "koa-bodyparser": "^4.3.0",
+        "koa-logger": "^3.2.1",
+        "koa-mount": "^4.0.0",
+        "koa-multer": "^1.0.2",
+        "koa-router": "^10.1.1",
+        "koagger": "^0.2.4",
+        "reflect-metadata": "^0.1.13",
+        "routing-controllers": "^0.9.0",
+        "routing-controllers-openapi": "^3.1.0"
+    },
+    "devDependencies": {
+        "@types/koa": "^2.13.4",
+        "@types/koa-logger": "^3.1.2",
+        "@types/koa__cors": "^3.1.1",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.3.7",
+        "prettier": "^2.6.1",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.6.3"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "trailingComma": "none",
+        "arrowParens": "avoid",
+        "tabWidth": 4
+    },
+    "lint-staged": {
+        "*.{md,json,yml,ts}": "prettier --write"
+    },
+    "scripts": {
+        "prepare": "husky install",
+        "dev": "ts-node-dev source/",
+        "test": "lint-staged",
+        "build": "rm -rf dist/  &&  tsc",
+        "start": "npm run build  &&  node dist/"
+    }
 }
