[add] User model & controller with JWT authorization [optimize] some details

--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
         "node": "^14.0.0"
     },
     "dependencies": {
-        "@koa/cors": "^3.3.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
+        "dotenv": "^16.0.0",
+        "jsonwebtoken": "^8.5.1",
+        "kcors": "^2.2.2",
         "koa": "^2.13.4",
         "koa-bodyparser": "^4.3.0",
+        "koa-jwt": "^4.0.3",
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
         "koa-multer": "^1.0.2",
@@ -36,9 +39,9 @@
         "typeorm": "^0.3.4"
     },
     "devDependencies": {
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/koa": "^2.13.4",
         "@types/koa-logger": "^3.1.2",
-        "@types/koa__cors": "^3.1.1",
         "cross-env": "^7.0.3",
         "husky": "^7.0.4",
         "lint-staged": "^12.3.7",
