--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "reflect-metadata": "^0.1.13",
         "routing-controllers": "^0.9.0",
         "routing-controllers-openapi": "^3.1.0",
-        "typeorm": "^0.3.4"
+        "typeorm": "^0.3.6"
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^8.5.8",
@@ -44,9 +44,9 @@
         "@types/koa-logger": "^3.1.2",
         "cross-env": "^7.0.3",
         "husky": "^7.0.4",
-        "lint-staged": "^12.3.7",
+        "lint-staged": "^12.3.8",
         "prettier": "^2.6.2",
-        "sqlite3": "^5.0.2",
+        "sqlite3": "^5.0.3",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.6.3"
     },
@@ -64,7 +64,7 @@
         "dev": "ts-node-dev source/",
         "test": "lint-staged",
         "build": "rm -rf dist/  &&  tsc",
-        "start": "node dist/",
+        "start": "cross-env NODE_ENV=production  &&  node dist/",
         "typeorm": "typeorm-ts-node-commonjs -d source/model/index.ts",
         "migration:generate": "npm run typeorm -- migration:generate",
         "migration:run": "npm run typeorm -- migration:run",
