--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "outDir": "dist"
-    }
+    },
+    "include": ["source/**/*.ts"]
 }
