--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
-        "dotenv": "^16.0.0",
+        "dotenv": "^16.0.2",
         "jsonwebtoken": "^8.5.1",
         "kcors": "^2.2.2",
         "koa": "^2.13.4",
@@ -29,26 +29,27 @@
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
         "koa-multer": "^1.0.2",
-        "koa-router": "^10.1.1",
+        "koa-router": "^12.0.0",
         "koagger": "^0.2.4",
-        "pg": "^8.7.3",
+        "pg": "^8.8.0",
         "pg-connection-string": "^2.5.0",
         "reflect-metadata": "^0.1.13",
         "routing-controllers": "^0.9.0",
         "routing-controllers-openapi": "^3.1.0",
-        "typeorm": "^0.3.6"
+        "typeorm": "^0.3.9",
+        "web-utility": "^3.9.4"
     },
     "devDependencies": {
-        "@types/jsonwebtoken": "^8.5.8",
-        "@types/koa": "^2.13.4",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/koa": "^2.13.5",
         "@types/koa-logger": "^3.1.2",
         "cross-env": "^7.0.3",
-        "husky": "^7.0.4",
-        "lint-staged": "^12.3.8",
-        "prettier": "^2.6.2",
-        "sqlite3": "^5.0.3",
-        "ts-node-dev": "^1.1.8",
-        "typescript": "^4.6.3"
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
+        "prettier": "^2.7.1",
+        "sqlite3": "^5.1.1",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "~4.8.3"
     },
     "prettier": {
         "singleQuote": true,
