[fix] Abstract Controller type errors [optimize] simplify Home controller [optimize] update Upstream packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "esModuleInterop": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+        "importHelpers": true,
         "outDir": "dist"
     },
     "include": ["source/**/*.ts"]
