--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "source": "source/index.ts",
     "main": "dist/index.js",
     "engines": {
-        "node": "^14.0.0"
+        "node": ">=14"
     },
     "dependencies": {
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
-        "dotenv": "^16.0.2",
+        "dotenv": "^16.0.3",
         "jsonwebtoken": "^8.5.1",
         "kcors": "^2.2.2",
         "koa": "^2.13.4",
@@ -36,20 +36,22 @@
         "reflect-metadata": "^0.1.13",
         "routing-controllers": "^0.9.0",
         "routing-controllers-openapi": "^3.1.0",
-        "typeorm": "^0.3.9",
-        "web-utility": "^3.9.4"
+        "tslib": "^2.4.1",
+        "typeorm": "^0.3.10",
+        "web-utility": "^3.9.9"
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^8.5.9",
         "@types/koa": "^2.13.5",
         "@types/koa-logger": "^3.1.2",
+        "@types/node": "^16.18.3",
         "cross-env": "^7.0.3",
-        "husky": "^8.0.1",
+        "husky": "^8.0.2",
         "lint-staged": "^13.0.3",
         "prettier": "^2.7.1",
-        "sqlite3": "^5.1.1",
+        "sqlite3": "^5.1.2",
         "ts-node-dev": "^2.0.0",
-        "typescript": "~4.8.3"
+        "typescript": "~4.8.4"
     },
     "prettier": {
         "singleQuote": true,
