--- a/package.json
+++ b/package.json
@@ -19,39 +19,39 @@
     },
     "dependencies": {
         "class-transformer": "^0.5.1",
-        "class-validator": "^0.13.2",
+        "class-validator": "^0.14.0",
         "dotenv": "^16.0.3",
         "jsonwebtoken": "^8.5.1",
         "kcors": "^2.2.2",
-        "koa": "^2.13.4",
+        "koa": "^2.14.1",
         "koa-bodyparser": "^4.3.0",
         "koa-jwt": "^4.0.3",
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
-        "koa-multer": "^1.0.2",
-        "koa-router": "^12.0.0",
+        "@koa/multer": "^3.0.2",
+        "@koa/router": "^12.0.0",
         "koagger": "^0.2.4",
         "pg": "^8.8.0",
         "pg-connection-string": "^2.5.0",
         "reflect-metadata": "^0.1.13",
-        "routing-controllers": "^0.9.0",
+        "routing-controllers": "^0.10.0",
         "routing-controllers-openapi": "^3.1.0",
         "tslib": "^2.4.1",
-        "typeorm": "^0.3.10",
-        "web-utility": "^3.9.9"
+        "typeorm": "^0.3.11",
+        "web-utility": "^4.0.0"
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^8.5.9",
         "@types/koa": "^2.13.5",
         "@types/koa-logger": "^3.1.2",
-        "@types/node": "^16.18.3",
+        "@types/node": "^16.18.10",
         "cross-env": "^7.0.3",
         "husky": "^8.0.2",
-        "lint-staged": "^13.0.3",
-        "prettier": "^2.7.1",
-        "sqlite3": "^5.1.2",
+        "lint-staged": "^13.1.0",
+        "prettier": "^2.8.1",
+        "sqlite3": "^5.1.4",
         "ts-node-dev": "^2.0.0",
-        "typescript": "~4.8.4"
+        "typescript": "~4.9.4"
     },
     "prettier": {
         "singleQuote": true,
