--- a/package.json
+++ b/package.json
@@ -15,28 +15,29 @@
     "source": "source/index.ts",
     "main": "dist/index.js",
     "engines": {
-        "node": ">=14"
+        "node": ">=16"
     },
     "dependencies": {
+        "@koa/cors": "^4.0.0",
+        "@koa/multer": "^3.0.2",
+        "@koa/router": "^12.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dotenv": "^16.0.3",
         "jsonwebtoken": "^8.5.1",
-        "kcors": "^2.2.2",
         "koa": "^2.14.1",
         "koa-bodyparser": "^4.3.0",
-        "koa-jwt": "^4.0.3",
+        "koa-jwt": "^4.0.4",
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
-        "@koa/multer": "^3.0.2",
-        "@koa/router": "^12.0.0",
         "koagger": "^0.2.4",
-        "pg": "^8.8.0",
+        "mobx-restful": "^0.6.0",
+        "pg": "^8.9.0",
         "pg-connection-string": "^2.5.0",
         "reflect-metadata": "^0.1.13",
-        "routing-controllers": "^0.10.0",
-        "routing-controllers-openapi": "^3.1.0",
-        "tslib": "^2.4.1",
+        "routing-controllers": "^0.10.1",
+        "routing-controllers-openapi": "^4.0.0",
+        "tslib": "^2.5.0",
         "typeorm": "^0.3.11",
         "web-utility": "^4.0.0"
     },
@@ -44,14 +45,14 @@
         "@types/jsonwebtoken": "^8.5.9",
         "@types/koa": "^2.13.5",
         "@types/koa-logger": "^3.1.2",
-        "@types/node": "^16.18.10",
+        "@types/node": "^16.18.12",
         "cross-env": "^7.0.3",
-        "husky": "^8.0.2",
+        "husky": "^8.0.3",
         "lint-staged": "^13.1.0",
-        "prettier": "^2.8.1",
+        "prettier": "^2.8.3",
         "sqlite3": "^5.1.4",
         "ts-node-dev": "^2.0.0",
-        "typescript": "~4.9.4"
+        "typescript": "~4.9.5"
     },
     "prettier": {
         "singleQuote": true,
@@ -67,7 +68,7 @@
         "dev": "ts-node-dev source/",
         "test": "lint-staged",
         "build": "rm -rf dist/  &&  tsc",
-        "start": "cross-env NODE_ENV=production  &&  node dist/",
+        "start": "cross-env NODE_ENV=production  node dist/",
         "typeorm": "typeorm-ts-node-commonjs -d source/model/index.ts",
         "migration:generate": "npm run typeorm -- migration:generate",
         "migration:run": "npm run typeorm -- migration:run",
