--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
         "@types/koa": "^2.13.8",
         "@types/koa-logger": "^3.1.2",
         "@types/node": "^18.17.2",
+        "@typescript-eslint/eslint-plugin": "^6.3.0",
+        "@typescript-eslint/parser": "^6.3.0",
+        "eslint": "^8.47.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.3",
         "prettier": "^3.0.1",
