--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@idea2app/rest-node-ts",
-    "version": "0.5.0",
+    "version": "0.6.0",
     "license": "LGPL-3.0",
     "author": "shiy2008@gmail.com",
     "description": "RESTful API service scaffold based on Node.js & TypeScript",
@@ -15,7 +15,7 @@
     "source": "source/index.ts",
     "main": "dist/index.js",
     "engines": {
-        "node": ">=16"
+        "node": ">=18"
     },
     "dependencies": {
         "@koa/cors": "^4.0.0",
@@ -25,38 +25,39 @@
         "class-validator": "^0.14.0",
         "cross-env": "^7.0.3",
         "dotenv": "^16.3.1",
-        "jsonwebtoken": "^9.0.1",
+        "jsonwebtoken": "^9.0.2",
         "koa": "^2.14.2",
         "koa-bodyparser": "^4.4.1",
         "koa-jwt": "^4.0.4",
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
+        "koa2-swagger-ui": "^5.9.0",
         "koagger": "^0.3.0",
-        "mobx-restful": "^0.6.5",
-        "pg": "^8.11.2",
+        "mobx-restful": "^0.6.11",
+        "pg": "^8.11.3",
         "pg-connection-string": "^2.6.2",
         "reflect-metadata": "^0.1.13",
         "routing-controllers": "^0.10.4",
         "routing-controllers-openapi": "^4.0.0",
-        "tslib": "^2.6.1",
+        "tslib": "^2.6.2",
         "typeorm": "^0.3.17",
-        "web-utility": "^4.1.0"
+        "web-utility": "^4.1.3"
     },
     "devDependencies": {
-        "@types/jsonwebtoken": "^9.0.2",
-        "@types/koa": "^2.13.8",
-        "@types/koa-logger": "^3.1.2",
-        "@types/node": "^18.17.5",
-        "@typescript-eslint/eslint-plugin": "^6.3.0",
-        "@typescript-eslint/parser": "^6.3.0",
-        "eslint": "^8.47.0",
+        "@types/jsonwebtoken": "^9.0.3",
+        "@types/koa": "^2.13.9",
+        "@types/koa-logger": "^3.1.3",
+        "@types/node": "^18.17.17",
+        "@typescript-eslint/eslint-plugin": "^6.7.0",
+        "@typescript-eslint/parser": "^6.7.0",
+        "eslint": "^8.49.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
-        "lint-staged": "^13.3.0",
+        "lint-staged": "^14.0.1",
         "prettier": "^3.0.1",
         "sqlite3": "^5.1.6",
         "ts-node-dev": "^2.0.0",
-        "typescript": "~5.1.6"
+        "typescript": "~5.2.2"
     },
     "prettier": {
         "singleQuote": true,
@@ -71,7 +72,7 @@
         "prepare": "husky install",
         "dev": "ts-node-dev source/",
         "test": "lint-staged",
-        "build": "rm -rf dist/  &&  tsc",
+        "build": "rm -rf dist/ type/*.d.ts  &&  tsc  &&  mv dist/model/*.d.ts type/",
         "start": "cross-env NODE_ENV=production  node dist/",
         "typeorm": "typeorm-ts-node-commonjs -d source/model/index.ts",
         "migration:generate": "npm run typeorm -- migration:generate",
