[fix] Type package publishing [optimize] merge User Input model into User model [optimize] update Upstream packages

--- a/.github/workflows/publish-type.yml
+++ b/.github/workflows/publish-type.yml
@@ -22,8 +22,8 @@ jobs:
                   cache: pnpm
             - name: Install, Build & Publish
               run: |
+                  pnpm i  &&  pnpm build
                   cd type/
-                  pnpm i
                   npm publish
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
