--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,4 +39,5 @@ services:
             - 443:443
         networks:
             - idea2app
+        restart: always
         command: caddy reverse-proxy --from example.com --to rest-node-ts:8080
