--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "@koa/cors": "^4.0.0",
         "@koa/multer": "^3.0.2",
-        "@koa/router": "^12.0.0",
+        "@koa/router": "^12.0.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "cross-env": "^7.0.3",
@@ -31,7 +31,7 @@
         "koa-jwt": "^4.0.4",
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
-        "koa2-swagger-ui": "^5.9.1",
+        "koa2-swagger-ui": "^5.10.0",
         "koagger": "^0.3.0",
         "mobx-restful": "^0.6.12",
         "pg": "^8.11.3",
@@ -44,20 +44,20 @@
         "web-utility": "^4.1.3"
     },
     "devDependencies": {
-        "@types/jsonwebtoken": "^9.0.3",
-        "@types/koa": "^2.13.9",
-        "@types/koa-logger": "^3.1.3",
-        "@types/node": "^18.18.1",
-        "@typescript-eslint/eslint-plugin": "^6.7.4",
-        "@typescript-eslint/parser": "^6.7.4",
-        "eslint": "^8.50.0",
+        "@types/jsonwebtoken": "^9.0.5",
+        "@types/koa": "^2.13.12",
+        "@types/koa-logger": "^3.1.5",
+        "@types/node": "^18.18.13",
+        "@typescript-eslint/eslint-plugin": "^6.12.0",
+        "@typescript-eslint/parser": "^6.12.0",
+        "eslint": "^8.54.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
-        "lint-staged": "^14.0.1",
-        "prettier": "^3.0.3",
+        "lint-staged": "^15.1.0",
+        "prettier": "^3.1.0",
         "sqlite3": "^5.1.6",
         "ts-node-dev": "^2.0.0",
-        "typescript": "~5.2.2"
+        "typescript": "~5.3.2"
     },
     "prettier": {
         "singleQuote": true,
@@ -69,7 +69,7 @@
         "*.{md,json,yml,ts}": "prettier --write"
     },
     "scripts": {
-        "prepare": "husky install",
+        "prepare": "husky install  ||  true",
         "dev": "ts-node-dev source/",
         "test": "lint-staged",
         "build": "rm -rf dist/ type/*.d.ts  &&  tsc  &&  mv dist/model/*.d.ts type/",
@@ -79,7 +79,7 @@
         "migration:run": "npm run typeorm -- migration:run",
         "upgrade:dev": "npm run migration:generate -- migration/version  &&  npm run migration:run",
         "upgrade:pro": "cross-env NODE_ENV=production  npm run migration:generate -- .data/version  &&  npm run migration:run",
-        "pack-image": "docker build -t rest-node-ts:latest .",
-        "container": "docker rm -f rest-node-ts  &&  docker run --name rest-node-ts -p 8080:8080 -d rest-node-ts:latest"
+        "pack-image": "docker build -t idea2app/rest-node-ts:latest .",
+        "container": "docker rm -f rest-node-ts  &&  docker run --name rest-node-ts -p 8080:8080 -d idea2app/rest-node-ts:latest"
     }
 }
