--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "node": ">=18"
     },
     "dependencies": {
-        "@koa/cors": "^4.0.0",
+        "@koa/cors": "^5.0.0",
         "@koa/multer": "^3.0.2",
         "@koa/router": "^12.0.1",
         "class-transformer": "^0.5.1",
@@ -36,7 +36,7 @@
         "mobx-restful": "^0.6.12",
         "pg": "^8.11.3",
         "pg-connection-string": "^2.6.2",
-        "reflect-metadata": "^0.1.13",
+        "reflect-metadata": "^0.1.14",
         "routing-controllers": "^0.10.4",
         "routing-controllers-openapi": "^4.0.0",
         "tslib": "^2.6.2",
@@ -47,17 +47,17 @@
         "@types/jsonwebtoken": "^9.0.5",
         "@types/koa": "^2.13.12",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^18.18.13",
-        "@typescript-eslint/eslint-plugin": "^6.12.0",
-        "@typescript-eslint/parser": "^6.12.0",
-        "eslint": "^8.54.0",
+        "@types/node": "^18.19.3",
+        "@typescript-eslint/eslint-plugin": "^6.15.0",
+        "@typescript-eslint/parser": "^6.15.0",
+        "eslint": "^8.56.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
-        "lint-staged": "^15.1.0",
-        "prettier": "^3.1.0",
+        "lint-staged": "^15.2.0",
+        "prettier": "^3.1.1",
         "sqlite3": "^5.1.6",
         "ts-node-dev": "^2.0.0",
-        "typescript": "~5.3.2"
+        "typescript": "~5.3.3"
     },
     "prettier": {
         "singleQuote": true,
@@ -69,7 +69,7 @@
         "*.{md,json,yml,ts}": "prettier --write"
     },
     "scripts": {
-        "prepare": "husky install  ||  true",
+        "prepare": "husky install",
         "dev": "ts-node-dev source/",
         "test": "lint-staged",
         "build": "rm -rf dist/ type/*.d.ts  &&  tsc  &&  mv dist/model/*.d.ts type/",
