[add] GitHub template initializer & PR badges [add] VS Code & GitPod extensions [optimize] upgrade to PNPM 9, Husky 9 & other latest Upstream packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@idea2app/rest-node-ts",
-    "version": "0.6.0",
+    "version": "0.7.0",
     "license": "LGPL-3.0",
     "author": "shiy2008@gmail.com",
     "description": "RESTful API service scaffold based on Node.js & TypeScript",
@@ -22,42 +22,42 @@
         "@koa/multer": "^3.0.2",
         "@koa/router": "^12.0.1",
         "class-transformer": "^0.5.1",
-        "class-validator": "^0.14.0",
+        "class-validator": "^0.14.1",
         "cross-env": "^7.0.3",
-        "dotenv": "^16.3.1",
+        "dotenv": "^16.4.5",
         "jsonwebtoken": "^9.0.2",
-        "koa": "^2.14.2",
+        "koa": "^2.15.3",
         "koa-bodyparser": "^4.4.1",
         "koa-jwt": "^4.0.4",
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
         "koa2-swagger-ui": "^5.10.0",
         "koagger": "^0.3.0",
-        "mobx-restful": "^0.6.12",
-        "pg": "^8.11.3",
-        "pg-connection-string": "^2.6.2",
-        "reflect-metadata": "^0.1.14",
+        "mobx-restful": "^1.0.0",
+        "pg": "^8.12.0",
+        "pg-connection-string": "^2.6.4",
+        "reflect-metadata": "^0.2.2",
         "routing-controllers": "^0.10.4",
         "routing-controllers-openapi": "^4.0.0",
-        "tslib": "^2.6.2",
-        "typeorm": "^0.3.17",
-        "web-utility": "^4.1.3"
+        "tslib": "^2.6.3",
+        "typeorm": "^0.3.20",
+        "web-utility": "^4.4.0"
     },
     "devDependencies": {
-        "@types/jsonwebtoken": "^9.0.5",
-        "@types/koa": "^2.13.12",
+        "@types/jsonwebtoken": "^9.0.6",
+        "@types/koa": "^2.15.0",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^18.19.3",
-        "@typescript-eslint/eslint-plugin": "^6.15.0",
-        "@typescript-eslint/parser": "^6.15.0",
-        "eslint": "^8.56.0",
-        "eslint-plugin-simple-import-sort": "^10.0.0",
-        "husky": "^8.0.3",
-        "lint-staged": "^15.2.0",
-        "prettier": "^3.1.1",
-        "sqlite3": "^5.1.6",
+        "@types/node": "^18.19.40",
+        "@typescript-eslint/eslint-plugin": "^7.16.1",
+        "@typescript-eslint/parser": "^7.16.1",
+        "eslint": "^8.57.0",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.7",
+        "prettier": "^3.3.3",
+        "sqlite3": "^5.1.7",
         "ts-node-dev": "^2.0.0",
-        "typescript": "~5.3.3"
+        "typescript": "~5.5.3"
     },
     "prettier": {
         "singleQuote": true,
@@ -69,7 +69,7 @@
         "*.{md,json,yml,ts}": "prettier --write"
     },
     "scripts": {
-        "prepare": "husky install",
+        "prepare": "husky",
         "dev": "ts-node-dev source/",
         "test": "lint-staged",
         "build": "rm -rf dist/ type/*.d.ts  &&  tsc  &&  mv dist/model/*.d.ts type/",
