[add] models & controllers of Base & Activity Log [add] Search Condition utility & Type package Read Me [optimize] enable Soft Delete of Database & Multiple Environment Variable files [optimize] update Upstream packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@idea2app/rest-node-ts",
-    "version": "0.7.0",
+    "version": "0.9.0",
     "license": "LGPL-3.0",
     "author": "shiy2008@gmail.com",
     "description": "RESTful API service scaffold based on Node.js & TypeScript",
@@ -20,7 +20,7 @@
     "dependencies": {
         "@koa/cors": "^5.0.0",
         "@koa/multer": "^3.0.2",
-        "@koa/router": "^12.0.1",
+        "@koa/router": "^13.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cross-env": "^7.0.3",
@@ -33,6 +33,7 @@
         "koa-mount": "^4.0.0",
         "koa2-swagger-ui": "^5.10.0",
         "koagger": "^0.3.0",
+        "marked": "^14.0.0",
         "mobx-restful": "^1.0.0",
         "pg": "^8.12.0",
         "pg-connection-string": "^2.6.4",
@@ -40,20 +41,20 @@
         "routing-controllers": "^0.10.4",
         "routing-controllers-openapi": "^4.0.0",
         "tslib": "^2.6.3",
-        "typeorm": "^0.3.20",
+        "typeorm": "npm:@helveg/typeorm@^0.3.20",
         "web-utility": "^4.4.0"
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^9.0.6",
         "@types/koa": "^2.15.0",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^18.19.43",
-        "@typescript-eslint/eslint-plugin": "^8.0.1",
-        "@typescript-eslint/parser": "^8.0.1",
+        "@types/node": "^18.19.44",
+        "@typescript-eslint/eslint-plugin": "^8.1.0",
+        "@typescript-eslint/parser": "^8.1.0",
         "eslint": "^8.57.0",
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "husky": "^9.1.4",
-        "lint-staged": "^15.2.8",
+        "lint-staged": "^15.2.9",
         "prettier": "^3.3.3",
         "sqlite3": "^5.1.7",
         "ts-node-dev": "^2.0.0",
