--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -30,11 +30,11 @@ jobs:
                   cat > .env <<EOF
                   ${{ secrets.ENV_FILE }}
                   EOF
-            - uses: docker/setup-qemu-action@v2
-            - uses: docker/setup-buildx-action@v2
+            - uses: docker/setup-qemu-action@v3
+            - uses: docker/setup-buildx-action@v3
 
             - name: Build Image
-              uses: docker/build-push-action@v3
+              uses: docker/build-push-action@v6
               with:
                   context: .
                   platforms: linux/amd64
@@ -47,14 +47,15 @@ jobs:
                   mv ${{ env.ARTIFACT_PATH }} ./docker-compose.yml ./start.sh ./build
 
             - name: Transport Image
-              uses: garygrossgarten/github-action-scp@release
+              uses: appleboy/scp-action@v0.1.7
               if: ${{ env.HOST }}
               with:
-                  local: ./build
-                  remote: /tmp
+                  source: ./build/*.*
+                  target: /tmp/${{ env.BOX_NAME }}
                   host: ${{ secrets.HOST }}
                   username: ${{ secrets.USER }}
-                  privateKey: ${{ secrets.SSH_KEY }}
+                  password: ${{ secrets.SSH_KEY }}
+                  strip_components: 1
 
             - name: Run Image
               uses: garygrossgarten/github-action-ssh@release
@@ -62,8 +63,11 @@ jobs:
               with:
                   host: ${{ secrets.HOST }}
                   username: ${{ secrets.USER }}
-                  privateKey: ${{ secrets.SSH_KEY }}
+                  password: ${{ secrets.SSH_KEY }}
                   command: |
-                      mv /tmp/docker-compose.yml /tmp/start.sh ~/
-                      chmod +x ~/start.sh
-                      sudo ~/start.sh ${{ env.ARTIFACT_PATH }}
+                      mkdir -p ~/${{ env.BOX_NAME }} 
+                      cd /tmp/${{ env.BOX_NAME }}
+                      mv docker-compose.yml start.sh ~/${{ env.BOX_NAME }}
+                      cd ~/${{ env.BOX_NAME }}
+                      chmod +x start.sh
+                      echo '${{ secrets.SSH_KEY }}' | sudo -S ./start.sh /tmp/${{ env.BOX_NAME }}/${{ env.ARTIFACT_PATH }}
