--- a/.github/workflows/publish-type.yml
+++ b/.github/workflows/publish-type.yml
@@ -10,19 +10,24 @@ jobs:
             contents: write
             packages: write
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
 
-            - uses: pnpm/action-setup@v2
+            - uses: pnpm/action-setup@v4
               with:
                   version: 9
-            - uses: actions/setup-node@v3
+            - uses: actions/setup-node@v4
               with:
-                  node-version: 18
+                  node-version: 20
                   registry-url: https://npm.pkg.github.com
                   cache: pnpm
+            - name: Inject Environment variables
+              run: |
+                  cat > .env <<EOF
+                  ${{ secrets.ENV_FILE }}
+                  EOF
             - name: Install, Build & Publish
               run: |
-                  pnpm i  &&  pnpm build
+                  pnpm i  &&  npm test
                   cd type/
                   npm publish
               env:
