--- a/package.json
+++ b/package.json
@@ -33,33 +33,43 @@
         "koa-mount": "^4.0.0",
         "koa2-swagger-ui": "^5.10.0",
         "koagger": "^0.3.0",
-        "marked": "^14.0.0",
-        "mobx-restful": "^1.0.0",
+        "marked": "^14.1.1",
+        "mobx-github": "^0.3.4",
+        "mobx-restful": "^1.0.1",
         "pg": "^8.12.0",
         "pg-connection-string": "^2.6.4",
         "reflect-metadata": "^0.2.2",
         "routing-controllers": "^0.10.4",
         "routing-controllers-openapi": "^4.0.0",
-        "tslib": "^2.6.3",
+        "tslib": "^2.7.0",
         "typeorm": "npm:@helveg/typeorm@^0.3.20",
+        "undici": "^6.19.8",
         "web-utility": "^4.4.0"
     },
     "devDependencies": {
         "@octokit/openapi-types": "^22.2.0",
+        "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/koa": "^2.15.0",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^18.19.44",
-        "@typescript-eslint/eslint-plugin": "^8.1.0",
-        "@typescript-eslint/parser": "^8.1.0",
+        "@types/node": "^20.16.5",
+        "@typescript-eslint/eslint-plugin": "^8.4.0",
+        "@typescript-eslint/parser": "^8.4.0",
         "eslint": "^8.57.0",
         "eslint-plugin-simple-import-sort": "^12.1.1",
-        "husky": "^9.1.4",
-        "lint-staged": "^15.2.9",
+        "husky": "^9.1.5",
+        "jest": "^29.7.0",
+        "koajax": "^3.0.2",
+        "lint-staged": "^15.2.10",
         "prettier": "^3.3.3",
         "sqlite3": "^5.1.7",
-        "ts-node-dev": "^2.0.0",
+        "start-server-and-test": "^2.0.5",
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
         "typescript": "~5.5.4"
+    },
+    "resolutions": {
+        "native-file-system-adapter": "npm:@tech_query/native-file-system-adapter@^3.0.1"
     },
     "prettier": {
         "singleQuote": true,
@@ -70,10 +80,16 @@
     "lint-staged": {
         "*.{md,json,yml,ts}": "prettier --write"
     },
+    "jest": {
+        "preset": "ts-jest"
+    },
     "scripts": {
-        "prepare": "husky",
-        "dev": "ts-node-dev source/",
-        "test": "lint-staged",
+        "prepare": "husky || true",
+        "dev": "cross-env TS_NODE_TRANSPILE_ONLY=true  node -r ts-node/register --watch source/",
+        "lint": "lint-staged",
+        "start-test": "rm -rf .data/  &&  node dist/",
+        "jest": "jest",
+        "test": "npm run build  &&  server-test start-test 8080 jest",
         "build": "rm -rf dist/ type/*.d.ts  &&  tsc  &&  mv dist/model/*.d.ts type/",
         "start": "cross-env NODE_ENV=production  node dist/",
         "typeorm": "typeorm-ts-node-commonjs -d source/model/index.ts",
