--- a/type/package.json
+++ b/type/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "types": "index.d.ts",
     "dependencies": {
-        "@octokit/openapi-types": "^22.2.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/koa": "^2.15.0",
-        "mobx-restful": "^1.0.0"
+        "mobx-github": "^0.3.4",
+        "mobx-restful": "^1.0.1"
     }
 }
