[migrate] upgrade to ESLint 9 & other latest Upstream packages [optimize] some detail configuration

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -44,7 +44,7 @@ jobs:
             - name: Pick Docker Compose
               run: |
                   mkdir ./build
-                  mv ${{ env.ARTIFACT_PATH }} ./docker-compose.yml ./start.sh ./build
+                  mv ${{ env.ARTIFACT_PATH }} ./.env ./docker-compose.yml ./start.sh ./build
 
             - name: Transport Image
               uses: appleboy/scp-action@v0.1.7
@@ -65,9 +65,9 @@ jobs:
                   username: ${{ secrets.USER }}
                   password: ${{ secrets.SSH_KEY }}
                   command: |
-                      mkdir -p ~/${{ env.BOX_NAME }} 
                       cd /tmp/${{ env.BOX_NAME }}
-                      mv docker-compose.yml start.sh ~/${{ env.BOX_NAME }}
+                      mkdir -p ~/${{ env.BOX_NAME }} 
+                      mv .env docker-compose.yml start.sh ~/${{ env.BOX_NAME }}
                       cd ~/${{ env.BOX_NAME }}
                       chmod +x start.sh
                       echo '${{ secrets.SSH_KEY }}' | sudo -S ./start.sh /tmp/${{ env.BOX_NAME }}/${{ env.ARTIFACT_PATH }}
