[migrate] upgrade to Node.js 22, PNPM 10, Routing Controllers 0.11

--- a/package.json
+++ b/package.json
@@ -19,60 +19,67 @@
     },
     "dependencies": {
         "@koa/cors": "^5.0.0",
-        "@koa/multer": "^3.0.2",
+        "@koa/multer": "^3.1.0",
         "@koa/router": "^13.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.7",
         "jsonwebtoken": "^9.0.2",
-        "koa": "^2.15.3",
+        "koa": "^2.16.0",
         "koa-bodyparser": "^4.4.1",
         "koa-jwt": "^4.0.4",
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
         "koa2-swagger-ui": "^5.11.0",
-        "koagger": "^0.3.0",
-        "marked": "^15.0.6",
+        "koagger": "^0.4.0",
+        "marked": "^15.0.7",
         "mobx-github": "^0.3.5",
-        "mobx-restful": "^2.0.0",
-        "pg": "^8.13.1",
+        "mobx-restful": "^2.1.0",
+        "pg": "^8.14.1",
         "pg-connection-string": "^2.7.0",
         "reflect-metadata": "^0.2.2",
-        "routing-controllers": "^0.10.4",
-        "routing-controllers-openapi": "^4.0.0",
+        "routing-controllers": "^0.11.2",
+        "routing-controllers-openapi": "^5.0.0",
         "tslib": "^2.8.1",
         "typeorm": "npm:@helveg/typeorm@^0.3.21",
-        "undici": "^7.2.3",
-        "web-utility": "^4.4.2"
+        "undici": "^7.7.0",
+        "web-utility": "^4.4.3"
     },
     "devDependencies": {
-        "@eslint/js": "^9.18.0",
-        "@octokit/openapi-types": "^23.0.1",
+        "@eslint/js": "^9.23.0",
+        "@octokit/openapi-types": "^24.2.0",
         "@tech_query/node-toolkit": "^2.0.0-alpha.0",
         "@types/eslint-config-prettier": "^6.11.3",
-        "@types/eslint__js": "^8.42.3",
         "@types/jest": "^29.5.14",
-        "@types/jsonwebtoken": "^9.0.7",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/koa": "^2.15.0",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^22.10.7",
-        "eslint": "^9.18.0",
-        "eslint-config-prettier": "^10.0.1",
+        "@types/node": "^22.13.17",
+        "eslint": "^9.23.0",
+        "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-simple-import-sort": "^12.1.1",
-        "globals": "^15.14.0",
+        "globals": "^16.0.0",
         "husky": "^9.1.7",
         "jest": "^29.7.0",
-        "koajax": "^3.1.1",
-        "lint-staged": "^15.4.1",
-        "prettier": "^3.4.2",
+        "koajax": "^3.1.2",
+        "lint-staged": "^15.5.0",
+        "prettier": "^3.5.3",
         "sqlite3": "^5.1.7",
-        "start-server-and-test": "^2.0.10",
-        "swagger-typescript-api": "^13.0.23",
-        "ts-jest": "^29.2.5",
+        "start-server-and-test": "^2.0.11",
+        "swagger-typescript-api": "^13.0.28",
+        "ts-jest": "^29.3.1",
         "ts-node": "^10.9.2",
-        "typescript": "~5.7.3",
-        "typescript-eslint": "^8.20.0"
+        "typescript": "~5.8.2",
+        "typescript-eslint": "^8.29.0"
+    },
+    "resolutions": {
+        "reflect-metadata": "$reflect-metadata"
+    },
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "sqlite3"
+        ]
     },
     "prettier": {
         "singleQuote": true,
@@ -91,7 +98,7 @@
         "prepare": "husky || true",
         "dev": "cross-env TS_NODE_TRANSPILE_ONLY=true  node -r ts-node/register --watch source/",
         "lint": "lint-staged",
-        "build-test": "swagger-typescript-api -p http://localhost:8080/docs/spec -o test/ -n client.ts",
+        "build-test": "swagger-typescript-api generate -p http://localhost:8080/docs/spec -o test/ -n client.ts",
         "start-test": "rm -rf .data/  &&  node dist/",
         "jest": "jest",
         "debug": "server-test start-test 8080 jest",
