[add] Model Relation constructing method [optimize] use TS for ESLint configuration [optimize] update Upstream packages [fix] several detail bugs

--- a/package.json
+++ b/package.json
@@ -18,66 +18,66 @@
         "node": ">=22"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.779.0",
-        "@aws-sdk/s3-request-presigner": "^3.779.0",
+        "@aws-sdk/client-s3": "^3.797.0",
+        "@aws-sdk/s3-request-presigner": "^3.797.0",
         "@koa/cors": "^5.0.0",
         "@koa/multer": "^3.1.0",
         "@koa/router": "^13.1.0",
         "@passwordless-id/webauthn": "^2.3.0",
-        "@smithy/smithy-client": "^4.1.6",
+        "@smithy/smithy-client": "^4.2.0",
         "@supabase/auth-js": "^2.69.1",
         "@supabase/supabase-js": "^2.49.4",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cross-env": "^7.0.3",
-        "dotenv": "^16.4.7",
+        "dotenv": "^16.5.0",
         "jsonwebtoken": "^9.0.2",
-        "koa": "^2.16.0",
+        "koa": "^2.16.1",
         "koa-bodyparser": "^4.4.1",
         "koa-jwt": "^4.0.4",
         "koa-logger": "^3.2.1",
-        "koa-mount": "^4.0.0",
+        "koa-mount": "^4.2.0",
         "koa2-swagger-ui": "^5.11.0",
         "koagger": "^0.4.0",
-        "marked": "^15.0.7",
+        "marked": "^15.0.11",
         "mobx-github": "^0.3.5",
         "mobx-restful": "^2.1.0",
-        "pg": "^8.14.1",
-        "pg-connection-string": "^2.7.0",
+        "pg": "^8.15.6",
+        "pg-connection-string": "^2.8.5",
         "reflect-metadata": "^0.2.2",
         "routing-controllers": "^0.11.2",
         "routing-controllers-openapi": "^5.0.0",
         "tslib": "^2.8.1",
         "typeorm": "npm:@helveg/typeorm@^0.3.21",
-        "undici": "^7.7.0",
+        "undici": "^7.8.0",
         "web-utility": "^4.4.3"
     },
     "devDependencies": {
-        "@eslint/js": "^9.23.0",
-        "@octokit/openapi-types": "^24.2.0",
-        "@tech_query/node-toolkit": "^2.0.0-alpha.0",
+        "@eslint/js": "^9.25.1",
+        "@octokit/openapi-types": "^25.0.0",
         "@types/eslint-config-prettier": "^6.11.3",
         "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/koa": "^2.15.0",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^22.13.17",
-        "eslint": "^9.23.0",
-        "eslint-config-prettier": "^10.1.1",
+        "@types/node": "^22.15.2",
+        "eslint": "^9.25.1",
+        "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "globals": "^16.0.0",
         "husky": "^9.1.7",
         "jest": "^29.7.0",
+        "jiti": "^2.4.2",
         "koajax": "^3.1.2",
-        "lint-staged": "^15.5.0",
+        "lint-staged": "^15.5.1",
         "prettier": "^3.5.3",
         "sqlite3": "^5.1.7",
         "start-server-and-test": "^2.0.11",
-        "swagger-typescript-api": "^13.0.28",
-        "ts-jest": "^29.3.1",
+        "swagger-typescript-api": "^13.1.1",
+        "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
-        "typescript": "~5.8.2",
-        "typescript-eslint": "^8.29.0"
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.31.0"
     },
     "resolutions": {
         "reflect-metadata": "$reflect-metadata"
