--- a/package.json
+++ b/package.json
@@ -18,90 +18,91 @@
         "node": ">=22"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.797.0",
-        "@aws-sdk/s3-request-presigner": "^3.797.0",
+        "@aws-sdk/client-s3": "^3.848.0",
+        "@aws-sdk/s3-request-presigner": "^3.848.0",
         "@koa/cors": "^5.0.0",
-        "@koa/multer": "^3.1.0",
-        "@koa/router": "^13.1.0",
-        "@passwordless-id/webauthn": "^2.3.0",
-        "@smithy/smithy-client": "^4.2.0",
-        "@supabase/auth-js": "^2.69.1",
-        "@supabase/supabase-js": "^2.49.4",
+        "@koa/multer": "^4.0.0",
+        "@koa/router": "^13.1.1",
+        "@passwordless-id/webauthn": "^2.3.1",
+        "@smithy/smithy-client": "^4.4.8",
+        "@supabase/auth-js": "^2.71.1",
+        "@supabase/supabase-js": "^2.52.0",
         "class-transformer": "^0.5.1",
-        "class-validator": "^0.14.1",
+        "class-validator": "^0.14.2",
         "cross-env": "^7.0.3",
-        "dotenv": "^16.5.0",
+        "dotenv": "^17.2.0",
         "jsonwebtoken": "^9.0.2",
-        "koa": "^2.16.1",
+        "koa": "^3.0.0",
         "koa-bodyparser": "^4.4.1",
         "koa-jwt": "^4.0.4",
-        "koa-logger": "^3.2.1",
+        "koa-logger": "^4.0.0",
         "koa-mount": "^4.2.0",
         "koa2-swagger-ui": "^5.11.0",
         "koagger": "^0.4.0",
-        "marked": "^15.0.11",
-        "mobx-github": "^0.3.5",
+        "marked": "^16.1.1",
+        "mobx-github": "^0.3.11",
         "mobx-restful": "^2.1.0",
-        "pg": "^8.15.6",
-        "pg-connection-string": "^2.8.5",
+        "pg": "^8.16.3",
+        "pg-connection-string": "^2.9.1",
         "reflect-metadata": "^0.2.2",
         "routing-controllers": "^0.11.2",
         "routing-controllers-openapi": "^5.0.0",
         "tslib": "^2.8.1",
-        "typeorm": "npm:@helveg/typeorm@^0.3.21",
-        "undici": "^7.8.0",
+        "typeorm": "^0.3.25",
+        "undici": "^7.12.0",
         "web-utility": "^4.4.3"
     },
     "devDependencies": {
-        "@eslint/js": "^9.25.1",
-        "@octokit/openapi-types": "^25.0.0",
+        "@eslint/js": "^9.31.0",
+        "@octokit/openapi-types": "^25.1.0",
         "@types/eslint-config-prettier": "^6.11.3",
         "@types/jest": "^29.5.14",
-        "@types/jsonwebtoken": "^9.0.9",
-        "@types/koa": "^2.15.0",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^22.15.2",
-        "eslint": "^9.25.1",
-        "eslint-config-prettier": "^10.1.2",
+        "@types/node": "^22.16.5",
+        "better-sqlite3": "^12.2.0",
+        "eslint": "^9.31.0",
+        "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-simple-import-sort": "^12.1.1",
-        "globals": "^16.0.0",
+        "globals": "^16.3.0",
         "husky": "^9.1.7",
         "jest": "^29.7.0",
         "jiti": "^2.4.2",
         "koajax": "^3.1.2",
-        "lint-staged": "^15.5.1",
-        "prettier": "^3.5.3",
-        "sqlite3": "^5.1.7",
-        "start-server-and-test": "^2.0.11",
-        "swagger-typescript-api": "^13.1.1",
-        "ts-jest": "^29.3.2",
+        "lint-staged": "^16.1.2",
+        "prettier": "^3.6.2",
+        "start-server-and-test": "^2.0.12",
+        "swagger-typescript-api": "^13.2.7",
+        "ts-jest": "^29.4.0",
         "ts-node": "^10.9.2",
         "typescript": "~5.8.3",
-        "typescript-eslint": "^8.31.0"
+        "typescript-eslint": "^8.37.0"
     },
     "resolutions": {
-        "reflect-metadata": "$reflect-metadata"
+        "reflect-metadata": "$reflect-metadata",
+        "koa": "$koa"
     },
     "pnpm": {
         "onlyBuiltDependencies": [
-            "sqlite3"
+            "better-sqlite3"
         ]
     },
     "prettier": {
         "singleQuote": true,
         "trailingComma": "none",
         "arrowParens": "avoid",
-        "tabWidth": 4
+        "tabWidth": 4,
+        "printWidth": 100
     },
     "lint-staged": {
-        "*.{md,json,yml,mjs,ts}": "prettier --write",
+        "*.{md,json,yml,ts}": "prettier --write",
         "*.ts": "eslint --fix"
     },
     "jest": {
         "preset": "ts-jest"
     },
     "scripts": {
-        "install": "mv .env.example .env  ||  true",
+        "install": "cp -u .env.example .env  ||  true",
         "prepare": "husky || true",
         "dev": "cross-env TS_NODE_TRANSPILE_ONLY=true  node -r ts-node/register --watch source/",
         "lint": "lint-staged",
