--- a/package.json
+++ b/package.json
@@ -18,65 +18,66 @@
         "node": ">=22"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.848.0",
-        "@aws-sdk/s3-request-presigner": "^3.848.0",
+        "@aws-sdk/client-s3": "^3.899.0",
+        "@aws-sdk/s3-request-presigner": "^3.899.0",
         "@koa/cors": "^5.0.0",
         "@koa/multer": "^4.0.0",
-        "@koa/router": "^13.1.1",
+        "@koa/router": "^14.0.0",
         "@passwordless-id/webauthn": "^2.3.1",
-        "@smithy/smithy-client": "^4.4.8",
-        "@supabase/auth-js": "^2.71.1",
-        "@supabase/supabase-js": "^2.52.0",
+        "@smithy/smithy-client": "^4.7.0",
+        "@supabase/auth-js": "^2.72.0",
+        "@supabase/supabase-js": "^2.58.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
-        "cross-env": "^7.0.3",
-        "dotenv": "^17.2.0",
+        "cross-env": "^10.1.0",
+        "dotenv": "^17.2.3",
         "jsonwebtoken": "^9.0.2",
-        "koa": "^3.0.0",
+        "koa": "^3.0.1",
         "koa-bodyparser": "^4.4.1",
         "koa-jwt": "^4.0.4",
         "koa-logger": "^4.0.0",
         "koa-mount": "^4.2.0",
-        "koa2-swagger-ui": "^5.11.0",
+        "koa2-swagger-ui": "^5.12.0",
         "koagger": "^0.4.0",
-        "marked": "^16.1.1",
-        "mobx-github": "^0.3.11",
-        "mobx-restful": "^2.1.0",
+        "marked": "^16.3.0",
+        "mobx-github": "^0.5.1",
+        "mobx-restful": "^2.1.3",
         "pg": "^8.16.3",
         "pg-connection-string": "^2.9.1",
         "reflect-metadata": "^0.2.2",
-        "routing-controllers": "^0.11.2",
+        "routing-controllers": "^0.11.3",
         "routing-controllers-openapi": "^5.0.0",
         "tslib": "^2.8.1",
-        "typeorm": "^0.3.25",
-        "undici": "^7.12.0",
-        "web-utility": "^4.4.3"
+        "typeorm": "^0.3.27",
+        "undici": "^7.16.0",
+        "web-utility": "^4.6.1"
     },
     "devDependencies": {
-        "@eslint/js": "^9.31.0",
-        "@octokit/openapi-types": "^25.1.0",
+        "@eslint/js": "^9.36.0",
+        "@octokit/openapi-types": "^26.0.0",
         "@types/eslint-config-prettier": "^6.11.3",
         "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/koa": "^3.0.0",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^22.16.5",
-        "better-sqlite3": "^12.2.0",
-        "eslint": "^9.31.0",
+        "@types/node": "^22.18.7",
+        "better-sqlite3": "^12.4.1",
+        "eslint": "^9.36.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-simple-import-sort": "^12.1.1",
-        "globals": "^16.3.0",
+        "globals": "^16.4.0",
         "husky": "^9.1.7",
         "jest": "^29.7.0",
-        "jiti": "^2.4.2",
+        "jiti": "^2.6.0",
         "koajax": "^3.1.2",
-        "lint-staged": "^16.1.2",
+        "lint-staged": "^16.2.3",
         "prettier": "^3.6.2",
-        "start-server-and-test": "^2.0.12",
-        "swagger-typescript-api": "^13.2.7",
-        "ts-jest": "^29.4.0",
+        "start-server-and-test": "^2.1.2",
+        "swagger-typescript-api": "^13.2.13",
+        "ts-jest": "^29.4.4",
         "ts-node": "^10.9.2",
-        "typescript": "~5.8.3",
-        "typescript-eslint": "^8.37.0"
+        "typescript": "~5.9.2",
+        "typescript-eslint": "^8.45.0"
     },
     "resolutions": {
         "reflect-metadata": "$reflect-metadata",
